[gd_scene load_steps=2 format=3 uid="uid://bhvto0udi1khp"]

[ext_resource type="Script" uid="uid://cuj507hbn2fh2" path="res://Scenes/invader_spawner.gd" id="1_kesp3"]

[node name="InvaderSpawner" type="Node2D"]
script = ExtResource("1_kesp3")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="shotTimer" type="Timer" parent="."]
autostart = true
